<resources>
    <!-- General -->
    <string name="app_name">Frock</string>
    <string name="on_off">ON/OFF</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="ok">OK</string>
    <string name="cansel">Cansel</string>

    <string name="time">時間</string>
    <string name="week">曜日</string>
    <string name="alarm_is_ringing">アラーム鳴動中</string>
    <string name="storage">ストレージ</string>
    <string name="reason_storage">内部ストレージのファイル参照</string>

    <string name="setting_delete">設定を削除</string>
    <string name="message_setting_delete">削除しますか?</string>
    <!-- Alarm operation -->
    <string name="started_the_alarm">アラームを開始しました。</string>
    <string name="stopped_the_alarm">アラームを停止しました。</string>
    <string name="No_alarm_to_stop">現在鳴動しているアラームはありません</string>

    <!-- menu used -->
    <string name="opt_menu_01">アラーム設定新規作成</string>

    <!-- Alarm Settings preference -->
    <string name="preference_title">アラーム設定</string>

    <string name="alarmboolean_key">alarmboolean_key</string>

    <string name="alarmtime_key">alarmtime_key</string>
    <string name="alarmtime_setting">鳴動時間</string>
    <string name="alarmtime_summary">鳴動する時間を入力してください。</string>

    <string name="alarm_start_week_key">alarm_start_week_key</string>
    <string name="alarm_start_week_setting">曜日</string>
    <string name="alarm_start_week_summary">動作する曜日を入力してください。</string>

    <string name="alarm_sound_key">alarm_sound_key</string>
    <string name="alarm_sound_setting">音楽</string>
    <string name="alarm_sound_summary">アラームに使用する音楽ファイルを選択してください。</string>

    <string name="alarm_setting_save_key">alarm_setting_save_key</string>
    <string name="alarm_setting_save_name">保存</string>
    <string name="alarm_setting_save_summary">アラーム設定を保存する</string>
    <string name="alarm_setting_save_max">アラーム設定は%1$d件までです。</string>
    <string name="alarm_setting_no_week">曜日は一つは選択してください。</string>

    <!-- alarm week setting dialog -->
    <string name="alarm_Week_setting_title">曜日</string>
    <string-array name="alarm_Week_setting_menulist">
        <item>日曜日</item>
        <item>月曜日</item>
        <item>火曜日</item>
        <item>水曜日</item>
        <item>木曜日</item>
        <item>金曜日</item>
        <item>土曜日</item>
    </string-array>

    <!-- Notification -->
    <string name="channel_name_alarmringing">アラーム鳴動中</string>



    <!-- etc -->

</resources>
